--- a/estilo/style.css
+++ b/estilo/style.css
@@ -49,7 +49,7 @@ header > h1 {
     margin-bottom: 20px;
     font-size: 3em;
     font-weight: normal;
-
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.267);
 }
 
 header > p {
@@ -61,6 +61,7 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
+    padding-bottom: 30px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.322);
 }
 
